...
    'قمر': [
      TranslationSuggestion(text: 'moon', sense: 'noun', confidence: 0.97),
    ],
    'ماء': [
      TranslationSuggestion(text: 'water', sense: 'noun', confidence: 0.98),
    ],
    'بيت': [
      TranslationSuggestion(text: 'house', sense: 'noun', confidence: 0.9),
      TranslationSuggestion(text: 'home', sense: 'noun', confidence: 0.84),
      TranslationSuggestion(
        text: 'verse',
        sense: 'noun',
        confidence: 0.4,
...
